[gd_scene load_steps=13 format=2]

[ext_resource path="res://sprites/rock.png" type="Texture" id=1]
[ext_resource path="res://sprites/scissors.png" type="Texture" id=2]
[ext_resource path="res://fonts/M.ZubiKid.1.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://sprites/sheet.png" type="Texture" id=4]
[ext_resource path="res://scripts/title.gd" type="Script" id=5]
[ext_resource path="res://sounds/beautiful-piano-with-spacey-reverb-3494.mp3" type="AudioStream" id=6]

[sub_resource type="DynamicFont" id=1]
size = 72
outline_size = 3
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 84
outline_size = 3
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 47
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 50
outline_size = 2
outline_color = Color( 0.0156863, 0.0156863, 0.0156863, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 62
outline_size = 2
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=6]
resource_name = "float"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 344, 280 ), Vector2( 344, 300 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 356, 672 ), Vector2( 336, 672 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite3:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 326, 1098 ), Vector2( 336, 1088 ) ]
}

[node name="title" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.227451, 0.00392157, 0.266667, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 344, 280 )
scale = Vector2( 0.23125, 0.275176 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="play" type="Button" parent="Sprite"]
self_modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -640.0
margin_top = -427.0
margin_right = -640.0
margin_bottom = -427.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Sprite"]
margin_left = -311.351
margin_top = -145.362
margin_right = -149.351
margin_bottom = -64.3618
rect_scale = Vector2( 4, 4 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "PLAY"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 356, 672 )
scale = Vector2( 0.23125, 0.275176 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="options" type="Button" parent="Sprite2"]
self_modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -545.0
margin_top = -640.0
margin_right = -545.0
margin_bottom = -640.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Sprite2"]
margin_left = -553.513
margin_top = -116.29
margin_right = -271.513
margin_bottom = -35.2896
rect_scale = Vector2( 4, 4 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "OPTIONS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite3" type="Sprite" parent="."]
position = Vector2( 326, 1098 )
scale = Vector2( 0.23125, 0.275176 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="quit" type="Button" parent="Sprite3"]
self_modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -640.0
margin_top = -320.0
margin_right = -640.0
margin_bottom = -320.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Sprite3"]
margin_left = -380.541
margin_right = -98.5407
margin_bottom = 81.0
rect_scale = Vector2( 4, 4 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "QUIT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -120.0
margin_top = 40.0
margin_right = 68.0
margin_bottom = 134.0
custom_fonts/font = SubResource( 2 )
text = "ROCK"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -144.0
margin_top = 416.0
margin_right = 90.0
margin_bottom = 510.0
custom_fonts/font = SubResource( 2 )
text = "PAPER"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -200.0
margin_top = 928.0
margin_right = 176.0
margin_bottom = 1022.0
custom_fonts/font = SubResource( 2 )
text = "SCISSORS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="TextureRect" parent="."]
visible = false
margin_right = 1090.0
margin_bottom = 1280.0
rect_scale = Vector2( 0.67, 1 )
texture = ExtResource( 4 )

[node name="Label" type="Label" parent="Options"]
margin_left = 382.09
margin_top = 16.0
margin_right = 480.09
margin_bottom = 44.0
rect_scale = Vector2( 2, 2 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "OPTIONS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Options"]
margin_left = 262.687
margin_top = 192.0
margin_right = 1331.69
margin_bottom = 425.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Developer's note:
This is a game made in a day.
Consider this Pre-Alpha.
Anyway, nothing to see here
- MICHAEL AZUBUIKE"
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="Options"]
margin_left = 477.612
margin_top = 496.0
margin_right = 629.612
margin_bottom = 572.0
rect_scale = Vector2( 2, 1 )
custom_fonts/font = SubResource( 5 )
text = "BACK"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/float = SubResource( 6 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
autoplay = true

[connection signal="pressed" from="Sprite/play" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Sprite2/options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Sprite3/quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Options/Back" to="." method="_on_Back_pressed"]
